--- a/src/app/components/second-operand/second-operand.component.html
+++ b/src/app/components/second-operand/second-operand.component.html
@@ -1,12 +1,16 @@
-<form [formGroup]="secondOperandForm" novalidate class="row">
-  <table formArrayName="operands" class="col s12 m3">
+<form [formGroup]="secondOperandForm" novalidate>
+  <table formArrayName="operands">
+    <thead>
+      <th>Second operand</th>
+    </thead>
+
     <tr [formGroupName]="i" *ngFor="let operandEl of secondOperandForm.controls.operands.controls; let i=index">
       <td>
         <input type="number" formControlName="operand">
       </td>
       <td>
         <button class="btn red" type="button"
-          *ngIf="secondOperandForm.controls.operands.controls.length > 1" (click)="removeRow(i)">Delete</button>
+          *ngIf="secondOperandForm.controls.operands.controls.length > 0" (click)="removeRow(i)">Delete</button>
       </td>
     </tr>
     <button class="btn green" type="button" (click)="addRow()">Add row</button>
