--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 table {
-  min-width: 25%;
-  display: table;
+  min-width: 20%;
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+.results {
+  min-width: 40%;
 }
 
 .row {
